tests/fail/expr/field.stderr
error[E0308]: mismatched types
 --> tests/fail/expr/field.rs:6:25
  |
6 |     one_assert::assert!(bob.age);
  |                         ^^^^^^^ expected `bool`, found `u32`
